<resources>
    <string name="app_name">Yeogiisso</string>
    <string name="app_copyright">Copyright © 2021 SolomonM</string>
    <string name="optionmenu_shop">Street Shop</string>
    <string name="optionmenu_1">Option Menu1</string>
    <string name="optionmenu_2">Option Menu2</string>
    <string name="optionmenu_3">Option Menu3</string>
    <string name="tabmenu_bottomtab_nearby_shops">Nearby shops</string>
    <string name="tabmenu_bottomtab_Favorites">Favorites</string>
    <string name="drawermenu_option_detailsearch_title">Search requirement</string>
    <string name="drawermenu_option_detailsearch_local">Local search</string>
    <string name="drawermenu_option_detailsearch_price">Sale price</string>
    <string name="drawermenu_option_detailsearch_sectors">Sectors</string>
    <string name="drawermenu_option_detailsearch_cate">Category</string>
    <string name="drawermenu_option_detailsearch_notice">(Initialize settings when closing the app)</string>
    <string name="drawermenu_option_mapsetting_title">Map settings</string>
    <string name="drawermenu_option_mapsetting_etc">Other settings</string>
    <string name="drawermenu_option_mapsetting_radius">Search radius</string>
    <string name="drawermenu_option_mapsetting_mapmode">Map mode</string>
    <string name="drawermenu_option_mapsetting_mapmode_normal">Base map</string>
    <string name="drawermenu_option_mapsetting_mapmode_terrain">Topographic map</string>
    <string name="drawermenu_option_mapsetting_mapmode_hybrid">Hybrid map</string>
    <string name="drawermenu_option_mapsetting_etc_thickness">Circle thickness</string>
    <string name="drawermenu_option_mapsetting_etc_zoom_level">Zoom level</string>
    <string name="drawermenu_option_mapsetting_notice">(Maintain settings when closing the app)</string>
    <string name="drawermenu_setting_maintitle">Setting</string>
    <string name="drawermenu_setting_changelanguage">Change Language</string>
    <string name="drawermenu_setting_changetheme">Change Theme</string>
    <string name="drawermenu_setting_changeprofile">Change Profile</string>
    <string name="drawermenu_setting_qna">1:1 inquiry</string>
    <string name="drawermenu_setting_terms">Terms of service</string>
    <string name="drawermenu_setting_withdrawal">Withdrawal</string>
    <string name="text_tutorial_search_detail">advanced search</string>
    <string name="text_tutorial_call_searchbox">call search bar</string>
    <string name="text_tutorial_change_service">service change</string>
    <string name="text_tutorial_drag_resize">drag to resize</string>
    <string name="text_tutorial_call_addon">add menu call</string>
    <string name="text_tutorial_view_neverlook">don\'t look forward</string>
    <string name="check_language">en</string>
    <string name="noti_channel_id">noti_channel</string>
    <string name="text_ok">Ok</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_apply">Apply</string>
    <string name="text_change">Change</string>
    <string name="text_close">Close</string>
    <string name="text_yes">yes</string>
    <string name="text_no">no</string>
    <string name="text_retry">Retry</string>
    <string name="text_restart">Restart</string>
    <string name="text_finish">Finish</string>
    <string name="text_search">Search</string>
    <string name="text_loading">Please Wait...</string>
    <string name="text_loading_version_title">Version</string>
    <string name="text_drawer_login_title">Login is Required</string>
    <string name="text_drawer_logout_title">[Logout]</string>
    <string name="text_drawer_management_store">Store Management</string>
    <string name="text_drawer_management_review">Review Management</string>
    <string name="text_drawer_management_reservation">Reservation Management</string>
    <string name="text_settings_language_now">(Current Language)</string>
    <string name="text_settings_language_change">Language</string>
    <string name="text_settings_language_change_finish">Has been changed</string>
    <string name="text_settings_mode_daymode">Light Theme</string>
    <string name="text_settings_mode_darkmode">Dark Theme</string>
    <string name="text_settings_mode_now">(Current Theme)</string>
    <string name="text_settings_mode_change">Theme</string>
    <string name="text_settings_mode_change_finish">Has been changed</string>
    <string name="text_settings_server">Server</string>
    <string name="text_settings_permission">Permission settings</string>
    <string name="text_settings_event">Event</string>
    <string name="text_settings_notice">Notice</string>
    <string name="text_settings_certification">Certification center</string>
    <string name="text_login_id">ID</string>
    <string name="text_login_id_hint">Your ID</string>
    <string name="text_login_pw">PW</string>
    <string name="text_login_pw_hint">Your Password</string>
    <string name="text_signup_email">E-Mail</string>
    <string name="text_signup_email_hint">Your E-Mail</string>
    <string name="text_signup_nickname">Nickname</string>
    <string name="text_signup_nickname_hint">Your Nickname</string>
    <string name="text_signup_customer">Customer</string>
    <string name="text_signup_Entrepreneur">Entrepreneur</string>
    <string name="text_login_button">Login</string>
    <string name="text_signup_button">Signup</string>
    <string name="text_login_signup">Not a member yet?</string>
    <string name="text_signup_login">I have an ID!</string>
    <string name="text_login_autologin">AutoLogin</string>
    <string name="text_bottommenu_setmylocation">To my location</string>
    <string name="text_bottommenu_searchmap_mapposition">Search on current map</string>
    <string name="text_bottommenu_realtime_gps_turn_on">Turn on real-time GPS</string>
    <string name="text_bottommenu_realtime_gps_turn_off">Turn off real-time GPS</string>
    <string name="text_bottommenu_cate_all">All</string>
    <string name="text_markerdetail_view_moreinfo">Click to view details</string>
    <string name="text_markerdetail_moreinfo_number">Telephone ></string>
    <string name="text_markerdetail_moreinfo_findload">Get Directions ></string>
    <string name="text_markerdetail_moreinfo_menu">Representative menu</string>
    <string name="text_markerdetail_moreinfo_storeinfo">Company information</string>
    <string name="text_bottommenu_cate_dist">In order of distance</string>
    <string name="text_bottommenu_cate_evaluation">Star rating</string>
    <string name="text_bottommenu_cate_review">Number of reviews</string>
    <string name="text_allow_access_storage">Please allow access</string>
    <string name="text_searchbox_alert">(A search term has been entered)</string>
    <string name="text_login_for_facebook">Login with Facebook</string>
    <string name="text_login_for_naver">Login with Naver</string>
    <string name="text_login_for_kakao">Login with Kakao</string>
    <string name="text_login_for_google">Login with Google</string>
    <string name="text_signup_for_facebook">Sign up with Facebook</string>
    <string name="text_signup_for_naver">Sign up with Naver</string>
    <string name="text_signup_for_kakao">Sign up with Kakao</string>
    <string name="text_signup_for_google">Sign up with Google</string>
    <string name="text_save_search">Search</string>
    <string name="text_save_settings">Save settings</string>
    <string name="text_option_localsearch_none"><![CDATA[―]]></string>
    <string name="text_option_localsearch_ctp"><![CDATA[City ∙ Metropolis]]></string>
    <string name="text_option_localsearch_sig"><![CDATA[County]]></string>
    <string name="text_option_localsearch_emd"><![CDATA[Town]]></string>
    <string name="text_option_localsearch_set_ctp"><![CDATA[Please select City ∙ Metropolis]]></string>
    <string name="text_option_localsearch_set_sig"><![CDATA[Please select County]]></string>
    <string name="text_option_localsearch_set_emd"><![CDATA[Please select Town]]></string>
    <string name="text_option_start_search_none">No region selected\nSearch based on your current location</string>
    <string name="common_wait_0MSG0101_loading_wait">Please wait</string>
    <string name="common_finish_1MSG0101_finish_title">Do you want to quit?</string>
    <string name="common_finish_1MSG0102_finish_finish">Finish</string>
    <string name="common_finish_1MSG0103_finish_cancel">Cancel</string>
    <string name="common_change_1MSG0101_change_title">Do you want to change?</string>
    <string name="common_change_1MSG0102_change_ok">Change</string>
    <string name="common_change_1MSG0103_change_cancel">Cancel</string>
    <string name="common_message_2MSG0201_common_ok">Ok</string>
    <string name="common_message_2MSG0202_common_cancel">Cancel</string>
    <string name="common_message_2MSG0203_common_finish">Finish</string>
    <string name="error_0CON0101_server_connect_network_title">Please check your internet connection</string>
    <string name="error_0CON0102_server_connect_network_errorcode">@string/error_connect_network_CON01</string>
    <string name="error_0CON0201_server_connect_server_title">Sorry\nThere was an error on the server</string>
    <string name="error_0CON0202_server_connect_server_errorcode">@string/error_connect_server_CON02</string>
    <string name="error_0ERO0101_unusual_approach_title">This is an unusual approach</string>
    <string name="error_0ERO0201_language_change_title">Sorry\nThis language is not supported</string>
    <string name="error_0ERO0202_language_change_ok">Ok</string>
    <string name="error_0ERO0203_language_change_errorcode">@string/error_change_language_ERO02</string>
    <string name="text_bottommenu_alerttitle_realtime_gps_turn_on">Do you want to turn on real-time GPS mode?\n(Battery/Data usage will increase)</string>
    <string name="text_bottommenu_alerttitle_realtime_gps_turn_off">Are you sure you want to turn off real-time GPS mode?</string>
    <string name="text_list_alerttitle_nodata">The data does not exist</string>
    <string name="text_permission_alerttitle_gps_denied">When GPS permission is denied\nApp functionality is limited</string>
    <string name="text_permission_alertcancelbtn_gps_denied">Okay</string>
    <string name="text_permission_alertokbtn_gps_denied">GPS permission setting</string>
    <string name="text_checkfunction_alerttitle_gps_off">GPS is off\nPlease turn on GPS</string>
    <string name="text_checkfunction_alertcancelbtn_gps_off">Continue without GPS reception</string>
    <string name="text_checkfunction_alertokbtn_gps_off">Retry</string>
    <string name="text_checkfunction_connect_reconnect">Reconnected</string>
    <string name="text_checkfunction_alerttitle_gps_connect">GPS cannot be received</string>
    <string name="text_checkfunction_alertokbtn_gps_connect">GPS Reset</string>
    <string name="text_checkfunction_alerttitle_minimap_restart">The minimap is already running\nDo you want to restart with that store?</string>
    <string name="text_permission_alerttitle_storage_denied">Requires permission for storage space</string>
    <string name="text_checkfunction_alerttitle_matching_memberinformation">No matching member information</string>
    <string name="text_checkfunction_alerttitle_missing_iddata">Please enter your ID</string>
    <string name="text_checkfunction_alerttitle_missing_pwdata">Please enter a password</string>
    <string name="text_checkfunction_alerttitle_missing_nicknamedata">Please enter your nickname</string>
    <string name="text_checkfunction_alerttitle_success_signup">Membership registration was successful</string>
    <string name="text_checkfunction_alerttitle_check_idpw">Please check the information you entered again</string>
    <string name="text_checkfunction_alerttitle_overlap_email">This email already exists</string>
    <string name="text_checkfunction_alerttitle_overlap_nickname">This nickname already exists</string>
</resources>