<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/optionmenu_shop"
        android:orderInCategory="100"
        android:title="@string/optionmenu_shop"
        app:showAsAction="never" />
    <item
        android:id="@+id/optionmenu_option1"
        android:orderInCategory="100"
        android:title="@string/optionmenu_1"
        app:showAsAction="never" />
    <item
        android:id="@+id/optionmenu_option2"
        android:orderInCategory="100"
        android:title="@string/optionmenu_2"
        app:showAsAction="never" />
    <item
        android:id="@+id/optionmenu_option3"
        android:orderInCategory="100"
        android:title="@string/optionmenu_3"
        app:showAsAction="never" />
</menu>