<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Transparent"
    android:background="@android:color/transparent"
    android:id="@+id/layout_tutorial_mainframe">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:orientation="vertical"
        android:layout_gravity="left"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/pic_arrow_down1"
            tools:backgroundTint="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/text_tutorial_search_detail"
            android:textSize="20dp"
            android:textColor="@color/white"
            tools:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:orientation="vertical"
        android:layout_gravity="right"
        android:layout_marginTop="60dp"
        android:layout_marginRight="20dp">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/pic_arrow_down2"
            tools:backgroundTint="@color/black"
            android:layout_gravity="right"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/text_tutorial_change_service"
            android:textSize="20dp"
            android:textColor="@color/white"
            tools:textColor="@color/black"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_gravity="right"
        android:layout_marginTop="20dp"
        android:layout_marginRight="120dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/text_tutorial_call_searchbox"
            android:textSize="20dp"
            android:textColor="@color/white"
            tools:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginRight="10dp"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/pic_arrow_right"
            tools:backgroundTint="@color/black"
            android:layout_gravity="right|bottom" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:orientation="vertical"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="170dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/text_tutorial_drag_resize"
            android:textSize="20dp"
            android:textColor="@color/white"
            tools:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/pic_arrow_down3"
            tools:backgroundTint="@color/black"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:orientation="vertical"
        android:layout_gravity="right|bottom"
        android:layout_marginBottom="200dp"
        android:layout_marginRight="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/text_tutorial_call_addon"
            android:textSize="20dp"
            android:textColor="@color/white"
            tools:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/pic_arrow_diagonal1"
            tools:backgroundTint="@color/black"
            android:layout_gravity="right"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/text_ok"
        android:textSize="15dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="60dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical"
        android:layout_gravity="center|bottom"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:gravity="center">
            <CheckBox
                android:id="@+id/checkbox_veto_launching"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="bottom"/>
            <TextView
                android:id="@+id/tv_btn_veto_launching"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/text_tutorial_view_neverlook"
                android:textSize="15dp"
                android:textColor="@color/white"
                tools:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="bottom"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="2dp"/>
        </LinearLayout>
        <ImageView
            android:layout_width="200dp"
            android:layout_height="10dp"
            android:background="@drawable/pic_bottom_underline"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>

</FrameLayout>