<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:layout_gravity="end"
    android:padding="10dp"
    android:background="@drawable/custom_border_bg_leftradius_topbottom"
    android:focusableInTouchMode="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="left|top"
                android:gravity="center">
                <ImageView
                    android:id="@+id/iv_btn_drawer_option"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/ic_arrow_left"/>
            </LinearLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/drawermenu_setting_maintitle"
                    android:textColor="?attr/color_common_secondcolor_white"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginRight="50dp"/>
                <LinearLayout
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="right|top"
                    android:gravity="center">
                    <ImageView
                        android:id="@+id/iv_btn_drawer_close"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/ic_close"/>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/main_concept_color"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_drawersetting_changelanguage"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/drawermenu_setting_changelanguage"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:textColor="?attr/color_common_black_softgray"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/tv_drawersetting_changetheme"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/drawermenu_setting_changetheme"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:textColor="?attr/color_common_black_softgray"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"/>

                <!-- 삭제된 기능 (추후 기능변경을 위해 코드 남겨놓을 것) -->
                <!--
                <TextView
                    android:id="@+id/tv_drawersetting_changeprofile"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/drawermenu_setting_changeprofile"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:textColor="?attr/color_common_black_softgray"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:visibility="gone"
                    tools:visibility="gone"/>
                -->

                <TextView
                    android:id="@+id/tv_drawersetting_certification"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/text_settings_certification"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:textColor="?attr/color_common_black_softgray"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:visibility="gone"
                    tools:visibility="visible"/>

                <TextView
                    android:id="@+id/tv_drawersetting_event"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/text_settings_event"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:textColor="?attr/color_common_black_softgray"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/text_settings_notice"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:textColor="?attr/color_common_black_softgray"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="bottom">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/app_copyright"
                android:textSize="10dp"
                android:textColor="?attr/color_common_black_softgray"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <TextView
                android:id="@+id/tv_drawersetting_qna"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:text="@string/drawermenu_setting_qna"
                android:textSize="15dp"
                android:textColor="?attr/color_common_black_softgray"
                android:textStyle="bold"
                android:gravity="center"
                android:visibility="gone"
                tools:visibility="visible"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="match_parent"
                android:text="|"
                android:textStyle="bold"
                android:textColor="@color/main_concept_color"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:text="@string/drawermenu_setting_terms"
                android:textSize="15dp"
                android:textColor="?attr/color_common_black_softgray"
                android:textStyle="bold"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="match_parent"
                android:text="|"
                android:textStyle="bold"
                android:textColor="@color/main_concept_color"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tv_drawersetting_withdrawal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:text="@string/drawermenu_setting_withdrawal"
                android:textSize="15dp"
                android:textColor="?attr/color_common_black_softgray"
                android:textStyle="bold"
                android:gravity="center"
                android:visibility="gone"
                tools:visibility="visible"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="bottom"
            android:layout_gravity="bottom"
            android:background="@drawable/custom_border_bg_radius_all_for_bottomlayoutlist">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="구글 광고"
                android:textSize="20dp"
                android:textColor="@color/main_concept_color"
                android:textStyle="bold"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>