<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dialog.alertdialog.Ui_AlertDialog_Activity"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@android:color/transparent"
    android:id="@+id/layout_dialog_alertdialog_background">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_border_bg_radius_all"
        android:id="@+id/layout_dialog_alertdialog_mainframe"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <TextView
                android:id="@+id/tv_alert_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_loading"
                android:textSize="15dp"
                android:textStyle="bold"
                android:textColor="?attr/color_common_black_softgray"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:gravity="center|bottom"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:gravity="left|bottom"
                android:layout_marginLeft="20dp">
                <TextView
                    android:id="@+id/tv_cancelbtn_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_close"
                    android:textStyle="bold"
                    android:textSize="13dp"
                    android:textColor="@color/main_concept_color"
                    android:gravity="bottom"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:gravity="right|bottom">
                <TextView
                    android:id="@+id/tv_nobtn_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_cancel"
                    android:textStyle="bold"
                    android:textSize="13dp"
                    android:textColor="@color/main_concept_color"
                    android:gravity="bottom"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:gravity="right|bottom"
                android:layout_marginRight="20dp">
                <TextView
                    android:id="@+id/tv_okbtn_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_ok"
                    android:textStyle="bold"
                    android:textSize="13dp"
                    android:textColor="@color/main_concept_color"
                    android:gravity="bottom"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>